# OneClone

./: CMakeLists.txt  main.cpp  resources.qrc
model/: Config.h  Job.cpp  Job.h  Manager.cpp  Manager.h  SharedSettings.cpp  SharedSettings.h
resources/: logo.ai
view/: JobListWidget.cpp  JobListWidget.h  JobWidget.cpp  JobWidget.h  JobWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui
